# focu

./: .cursorrules  .gitignore  .windsurfrules  CONTRIBUTING.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  turbo.json
.cursor/rules/: file-over-app.mdc  project.mdc
.github/workflows/: publish-on-release.yml
apps/desktop/: README.md  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: migrated.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: keyring.rs  main.rs
apps/desktop/src/app/: PomodoroTimer.tsx  Settings.tsx  chat.tsx  greet.tsx  layout.tsx  ollama.tsx  page.tsx  store.ts
apps/desktop/src/components/: CommandMenu.tsx  DateNavigationHeader.tsx  Sidebar.tsx  StatusFooter.tsx  Updater.tsx
apps/desktop/src/database/: backup-manager.ts  chats.ts  db.ts  export.ts  file-chat-manager.ts  file-manager.ts  file-types.ts  notes.ts  reflections.ts  tasks.ts
apps/desktop/src/hooks/: useCloseSettings.ts  useEscapeHandler.ts  useModelAvailability.ts  useSettings.ts  useStatsCounter.ts  useTauriDraggable.ts
apps/desktop/src/lib/: aiModels.ts  fileChatHelper.ts  fileChatWatcher.ts  journalService.ts  persona.ts  shortcuts.ts  systemMessages.ts  throttle-utils.ts  token-utils.ts  withStorageDOMEvents.ts
apps/desktop/src/store/: aiProviderStore.ts  appStore.ts  backupStore.ts  chatStore.ts  fileChatStore.ts  (+6 more)
apps/landing-page/: README.md  content-collections.ts  next.config.mjs  package.json  turbo.json
apps/landing-page/app/: layout.tsx  page.tsx
(+279 files in other folders)
